# ai_exam_generator

./: README.md  app.py  pyproject.toml
src/: audio_manager.py  context_manager.py  exam_flow.py  llm_manager.py
